--- a/src/app/component/profile/profile/profile.component.html
+++ b/src/app/component/profile/profile/profile.component.html
@@ -9,7 +9,7 @@
         <nav aria-label="breadcrumb" style="margin-top: 8px;">
           <ol class="breadcrumb">
             <li class="breadcrumb-item">
-              <a [routerLink]="['/']">Home</a>
+              <a class="navigation-link" [routerLink]="['/']">Home</a>
             </li>
             <li class="breadcrumb-item active"> Recyclers</li>
             <li aria-current="page"
