--- a/src/app/component/vouchers/vouchers/vouchers.component.html
+++ b/src/app/component/vouchers/vouchers/vouchers.component.html
@@ -8,7 +8,7 @@
     <section class="container mt-4">
       <nav aria-label="breadcrumb" style="margin-top: 8px;">
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"> <a [routerLink]="['/']">Home</a> </li>
+          <li class="breadcrumb-item"> <a class="navigation-link"  [routerLink]="['/']">Home</a> </li>
           <li class="breadcrumb-item active"> Vouchers </li>
         </ol>
       </nav>
