--- a/src/app/component/centers/center-all/center-all.component.html
+++ b/src/app/component/centers/center-all/center-all.component.html
@@ -8,7 +8,7 @@
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb">
             <li class="breadcrumb-item">
-              <a [routerLink]="['/']">Home</a>
+              <a class="text-success" [routerLink]="['/']">Home</a>
             </li>
             <li class="breadcrumb-item active"> Recycling Centers </li>
           </ol>
