--- a/src/app/component/centers/center-new/center-new.component.css
+++ b/src/app/component/centers/center-new/center-new.component.css
@@ -1,3 +1,10 @@
 .chip-set{
   margin-left: 12px;
 }
+
+
+.btn-msg-color {
+  background-color: #A01540;
+  color: #fff;
+  transition: background-color 0.3s ease-in-out;
+}
