--- a/src/app/component/auth/login/login.component.html
+++ b/src/app/component/auth/login/login.component.html
@@ -35,7 +35,7 @@
                   <a [ngStyle]="{'pointer-events': state.dataState === DataState.LOADING ? 'none' : ''}" routerLink="/register" class="link">Become a .msgRecycler</a>
                 </div>
                 <div class="col">
-                  <a [ngStyle]="{'pointer-events': state.dataState === DataState.LOADING ? 'none' : ''}" routerLink="/reset-password" class="link">Forgot your password?</a>
+                  <a [ngStyle]="{'pointer-events': state.dataState === DataState.LOADING ? 'none' : ''}" routerLink="/reset-pass" class="link">Forgot your password?</a>
                 </div>
               </div>
             </div>
