--- a/src/app/component/profile/profile/profile.component.html
+++ b/src/app/component/profile/profile/profile.component.html
@@ -47,10 +47,10 @@
                  data-bs-toggle="pill" id="security" role="tab">
                 <i class="bi bi-shield-shaded" style="margin-right: 12px;"></i> Authorization
               </a>
-              <a aria-controls="application" aria-selected="true" class="nav-link" data-bs-target="#account-settings-tab"
-                 data-bs-toggle="pill" id="account" role="tab">
-                <i class="bi bi-gear" style="margin-right: 12px;"></i> Account Settings
-              </a>
+<!--              <a aria-controls="application" aria-selected="true" class="nav-link" data-bs-target="#account-settings-tab"-->
+<!--                 data-bs-toggle="pill" id="account" role="tab">-->
+<!--                <i class="bi bi-gear" style="margin-right: 12px;"></i> Account Settings-->
+<!--              </a>-->
               <a aria-controls="notification" aria-selected="true" class="nav-link" data-bs-target="#notification-tab"
                  data-bs-toggle="pill" id="notification" role="tab">
                 <i class="bi bi-lock-fill" style="margin-right: 12px;"></i> Authentication
