--- a/src/app/component/leaderboard/leaderboard.component.html
+++ b/src/app/component/leaderboard/leaderboard.component.html
@@ -9,7 +9,7 @@
       <nav aria-label="breadcrumb" style="margin-top: 8px;">
         <ol class="breadcrumb">
           <li class="breadcrumb-item"> <a class="navigation-link" [routerLink]="['/']">Home</a> </li>
-          <li class="breadcrumb-item active"> Vouchers </li>
+          <li class="breadcrumb-item active"> Leaderboard </li>
         </ol>
       </nav>
       <div class="row">
@@ -24,14 +24,14 @@
         </div>
 
         <!-- Search Form -->
-        <form [formGroup]="searchForm" (ngSubmit)="getResults()" class="d-flex justify-content-end">
+        <form [formGroup]="searchForm" (ngSubmit)="getResults()" (keydown.enter)="$event.preventDefault()" class="d-flex justify-content-end">
           <div class="d-flex align-items-center">
             <label class="visually-hidden">County</label>
             <input
               formControlName="county"
               [typeahead]="counties"
               [minLength]="0"
-              [typeaheadWaitMs]="0"
+              [typeaheadWaitMs]="10"
               placeholder="Filter By County"
               class="form-control"
             />
