--- a/src/app/component/profile/profile/profile.component.html
+++ b/src/app/component/profile/profile/profile.component.html
@@ -69,7 +69,7 @@
             <div aria-labelledby="profile" class="tab-pane fade show active" id="profile-tab" role="tabpanel"
                  style="min-height: 510px;">
               <h3 class="mb-4">Profile Settings</h3>
-              <form (ngSubmit)="updateProfile($event)" [formGroup]="profileForm">
+              <form [formGroup]="profileForm" (ngSubmit)="updateProfile()" (keydown.enter)="$event.preventDefault()">
                 <div class="row">
                   <input formControlName="id" type="hidden">
                   <div class="col-md-6">
@@ -171,7 +171,7 @@
             <div aria-labelledby="password" class="tab-pane fade" id="password-tab" role="tabpanel"
                  style="min-height: 510px;">
               <h3 class="mb-4">Password Settings</h3>
-              <form #updatePasswordForm="ngForm" (ngSubmit)="updatePassword(updatePasswordForm)">
+              <form #updatePasswordForm="ngForm" (ngSubmit)="updatePassword(updatePasswordForm)" (keydown.enter)="$event.preventDefault()">
                 <div class="row">
                   <div class="col-md-6">
                     <div class="form-group">
