--- a/src/app/component/stats/stats/stats.component.html
+++ b/src/app/component/stats/stats/stats.component.html
@@ -23,7 +23,7 @@
           <div>
             <p class="mb-0 text-secondary">My Environmental Impact</p>
             <h4 class="my-1 text-danger"> +{{ userRewardPoints | sustainabilityIndex  }}%</h4>
-            <p class="mb-0 font-13">my environmental impact in <strong>{{ currentMonth | date: 'MMMM'}}</strong></p>
+            <p class="mb-0 font-13">my accumulated environmental impact in <strong>{{ currentMonth | date: 'MMMM'}}</strong></p>
           </div>
           <div class="widgets-icons-2 rounded-circle bg-gradient-bloody text-white ms-auto">
             <i class="fa-solid fa-leaf"></i>
